--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
-  "repository": "https://github.com/ITZSANATANI/CHATBOT",
+  "repository": "https://github.com/YoMysterious/Chat-Bot",
   "env": {
     "API_ID": {
       "description": "ɢᴇᴛ ᴛʜɪs ᴠᴀʟᴜᴇ ғʀᴏᴍ ᴍʏ.ᴛᴇʟᴇɢʀᴀᴍ.ᴏʀɢ/ᴀᴘᴘs.",
